# fastyolo

./: .gitignore  README.md  benchmarks.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmarks.py
src/fastyolo/: __init__.py  core.py  utils.py  video.py
tests/: test_fastyolo.py
