[project]
name = "fastyolo"
version = "0.1.0"
description = "A high-performance video object detection library powered by YOLO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    ]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["I", "B"]
line-length = 88


[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pytest>=7.4.0",
    "mypy>=1.15.0",
    "nvtx>=0.2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

